k8s/apps/tayle/base/app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: app
spec:
  selector:
    app: app
  ports:
    - name: web-ui
      port: 3100
      targetPort: 3100
  type: ClusterIP
