k8s/apps/tayle/base/app-ingress.yaml
# NOTE: We use ingress here rather than a simple service so we can route traffic
#   based on hostname and not only IP. Ingress also has the advantage of being
#   able to serve TLS.
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tayle-app-ingress
spec:
  # patched in kustomize
  #tls:
  #- hosts:
  #    - app.tayle.co
  #  secretName: app-tayle-co-tls

  rules:
  - host: app.tayle.co
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: app
            # port of the referenced service. A port name or port number is required for a IngressServiceBackend.
            port:
              name: web-ui
